force-app/main/default/objects/Grant_Application__c/Grant_Application__c.object-meta.xml
<CustomObject>
    <label>Grant Application</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grant Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>