force-app/main/default/objects/Grant_Application__c/fields/Applicant_Phone__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Phone__c</fullName>
    <label>Phone</label>
    <length>40</length>
    <type>Text</type>
</CustomField>