force-app/main/default/objects/Grant_Application__c/fields/Application_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Date__c</fullName>
    <defaultValue>Now()</defaultValue>
    <label>Application Date</label>
    <type>DateTime</type>
</CustomField>