force-app/main/default/objects/Grant_Application__c/fields/Grant_Type__c.field-meta.xml
<CustomField>
    <fullName>Grant_Type__c</fullName>
    <label>Grant Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>