force-app/main/default/objects/Grant_Application__c/fields/Paid_Disbursements__c.field-meta.xml
<CustomField>
    <fullName>Paid_Disbursements__c</fullName>
    <label>Paid Disbursements</label>
    <summarizedField
  >Grant_Disbursement__c.Amount_to_be_disbursed__c</summarizedField>
    <summaryFilterItems>
        <field>Grant_Disbursement__c.Grant_is_disbursed__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey
  >Grant_Disbursement__c.Grant_Applicantion__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>