force-app/main/default/objects/Grant_Application__c/fields/Support_Option__c.field-meta.xml
<CustomField>
    <fullName>Support_Option__c</fullName>
    <label>Support Option</label>
    <length>80</length>
    <type>Text</type>
</CustomField>