force-app/main/default/objects/Grant_Application__c/fields/Total_Disbursements__c.field-meta.xml
<CustomField>
    <fullName>Total_Disbursements__c</fullName>
    <label>Total Disbursements</label>
    <summarizedField
  >Grant_Disbursement__c.Amount_to_be_disbursed__c</summarizedField>
    <summaryForeignKey
  >Grant_Disbursement__c.Grant_Applicantion__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>