force-app/main/default/objects/Grant_Application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Applicant__c</columns>
    <columns>Monthly_Income__c</columns>
    <columns>Grant_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Current_Stage__c</columns>
    <columns>Submitted_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>